# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import authRouter from "./auth";
+import propertiesRouter from "./properties";
+import bookingsRouter from "./bookings";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use("/auth", authRouter);
+router.use("/properties", propertiesRouter);
+router.use("/bookings", bookingsRouter);
 
 export default router;
